User can set the size of the grid by inputting a number over 0 and below 65. The setSide function is called by user input within an input box. The input is then compared in an if statement to ensure it is not negative or the number is not too high. After the global variable for size (squaresOneSide) has been changed. The deleteGrid function is called.

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: white;
-    height: 400px;
+    height: 500px;
 }
 
 .ButtonPanel{
